<resources>
    <string name="app_name">StoryApps2</string>

    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="title_signup_page">Create your Story Account :)</string>
    <string name="title_login_page">Log in on story :)</string>

    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="txt_to_register">Dont Have Any Account?</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="detail_photo">detail photo</string>
    <string name="persone_username">Ulfa</string>
    <string name="description">Description</string>
    <string name="upload_story">Upload Story</string>
    <string name="instagram">Instagram</string>
    <string name="full_name">Full Name</string>
    <string name="input_full_name">Enter your name</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="retry">Retry</string>
    <string name="upload_seccess">Upload Berhasil</string>
    <string name="api_token">Login kembali</string>
    <string name="btn_ok">oke</string>
    <string name="story_description">Descripsi harus diisi</string>
    <string name="api_email">Format email benar</string>
    <string name="api_unauthorized">Email belum terdaftar atau Kata sandi salah</string>
    <string name="dialog">Lorem ipsum dolor sit amet</string>
    <string name="oke">Oke</string>
    <string name="already_account">already have an account?</string>
    <string name="login_lagi">Login</string>
    <string name="permission_error">Permission Ditolak</string>
    <string name="email_error">Format email tidak valid</string>
    <string name="email_error_unauthorized">Email atau Kata Sandi salah</string>
    <string name="validation_email">email dan password harus diisi</string>
    <string name="validation_password">password harus 6 karakter</string>
    <string name="data_error">gagal memuat data</string>
    <string name="token_error">silakan login kembali</string>
    <string name="image_error">gambar terlalu besar</string>
    <string name="image_send_error">gagal uplaod gambar</string>
    <string name="registrasi_sukses">Registrasi berhasil</string>
    <string name="validation_name">nama, email dan password harus diisi</string>
    <string name="empty_email">"Email still blank, "</string>
    <string name="empty_password">Password still empty</string>
    <string name="register_ok">success</string>
    <string name="incorrect_email_password">Email or Password incorrect</string>
    <string name="empty_name">Name still empty</string>
    <string name="register_failed">Failed</string>
    <string name="story_detail">Story Detail</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="not_null">Text cannot be empty</string>
    <string name="select">Select</string>
    <string name="allow">Allow</string>

    <string name="error_message_email">Email cannot be empty</string>
    <string name="error_email_nonvalid">Email is not valid</string>
    <string name="error_password">Password must be longer than 6</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="story_ok">Success</string>
    <string name="story_failed">Failed</string>
    <string name="empty_des">Description still empty</string>
    <string name="alert">Alert</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="upload_ok">Success</string>
    <string name="upload_failed">Failed</string>

    <string name="loading">Loading...</string>
    <string name="imageurl">ImageURL</string>
    <string name="username">UserName</string>

    <string name="upload_confirm">Are you sure to Upload this??</string>
</resources>